@@ -1,6 +1,11 @@
+2010-08-28 16:51  rsbivand
+
+	* R/gwe.R: as.double to storage.mode
+
 2010-05-12 17:41  rsbivand
 
-	* R/gwr.R: error on non-numeric adapt in gwr
+	* R/gwr.R, ChangeLog, inst/ChangeLog: error on non-numeric adapt in
+	  gwr
 
 2010-05-11 19:10  rsbivand
 
